--- a/src/app/device/device.component.html
+++ b/src/app/device/device.component.html
@@ -1,8 +1,15 @@
 <mk-box [isRemovable]="false">
-  <mk-box-header>
-      <button class="btn btn-success pull-right" (click)="add()" *ngIf="user.me.level<2">添加设备</button>
-  </mk-box-header>
   <mk-box-content>
+    <div class="col-lg-12" style="padding: 0;margin-bottom: 20px">
+      <div class="form-inline">
+        <button class="btn btn-success" (click)="add()">添加设备</button>
+        <div class="form-group pull-right">
+          <input type="text" class="form-control" style="width: 150px;" placeholder="设备ID" [(ngModel)]="filterId">
+          <input type="text" class="form-control" style="width: 150px;" placeholder="设备名称" [(ngModel)]="filterName">
+          <input class="form-control" type="button" value="筛选" (click)="refresh()">
+        </div>
+      </div>
+    </div>
     <button class="btn btn-default btn-xs" style="margin-bottom: 10px" (click)="showTable=!showTable">切换显示</button>
     <div class="col-lg-12" style="padding: 0" *ngIf="showTable">
       <div class="table-responsive">
